--- a/index.html
+++ b/index.html
@@ -2,21 +2,26 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>陈黎阳的网站</title>
+<title>计网4班陈黎阳的网站</title>
 <style type="text/css">
-body {
-	background-color: #2374C0;
-}
+@import url("1.css");
 </style>
 </head>
 
 <body>
-<p>老师好，欢迎访问陈黎阳的网站
-</p>
-<ul>
-  <li><a href="index.html">我的主页</a></li>
-  <li><a href="photo.html">相册</a></li>
-	<li><a href="zy1.html">作业1 </a></li>
-</ul>
+<header><h1>计网4班陈黎阳的网站</h1></header>
+<main>
+	<nav> 
+		<a href="wolk.html" target="iframe">我的作业</a>
+		
+		<a href="关于我.html" target="iframe">about</a>
+		<a href="联系我.html"  target="iframe">联系</a>
+		<a href="相片.html" target="iframe">照片</a>
+		</nav>
+	  <section> <iframe src="wolk.html" name="iframe"></iframe> </section>
+	</main>
+<footer>Copyright © 2020 陈黎阳保留所有版权 </footer>
+
+
 </body>
 </html>
