--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<nav> 
 		<a href="wolk.html" target="iframe">我的作业</a>
 		
-		<a href="关于我.html" target="iframe">about</a>
-		<a href="联系我.html"  target="iframe">联系</a>
-		<a href="相片.html" target="iframe">照片</a>
+		<a href="aboutme.html" target="iframe">about</a>
+		<a href="lianxi.html"  target="iframe">联系</a>
+		<a href="phot.html" target="iframe">照片</a>
 		</nav>
 	  <section> <iframe src="wolk.html" name="iframe"></iframe> </section>
 	</main>
